fix: contrast gray issue

--- a/front/src/scss/custom-theme.scss
+++ b/front/src/scss/custom-theme.scss
@@ -4,7 +4,7 @@
 
 $my-primary: mat.define-palette(mat.$lime-palette, 900);
 $my-accent: mat.define-palette(mat.$brown-palette, A200, A100, A400);
-$my-gray: mat.define-palette(mat.$gray-palette, A200, A100, A400);
+$my-gray: mat.define-palette(mat.$gray-palette, 600);
 
 $my-theme: mat.define-light-theme(
   (
